[package]
name = "ecs-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1"
serde = {version="~1", features=["derive"]}
serde_yaml = "0"
jtd-codegen = "0"
jtd = "0.3"