[package]
name = "ecs-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="~1", features=["derive"]}
serde_json = "~1"
chrono = {version="0.4", features=["serde"] }
chrono-tz = "0.8"
anyhow = "1"
log = "0.4"

[build-dependencies]
anyhow = "1"
serde = {version="~1", features=["derive"]}
serde_yaml = "0"
codegen = "0.2"
convert_case = "0.6"
build-helper = "0.1"